fix circle segment alignments and colorize

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+body {
+  background-color: rgb(33, 44, 64);
+}
+
 .App {
   text-align: center;
 }
